--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -45,7 +45,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/sarah.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/sarah.jpg" alt="" class="img-fluid rounded">
         <h1 class="text-light"><a href="index.html">Sarah Demers</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.facebook.com/sarah011/" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -78,7 +78,7 @@
   <main id="main">
 
     <!-- ======= About Section ======= -->
-    <section id="about" class="about">
+    <section id="about" class="about d-flex align-items-center">
       <div class="container">
 
         <div class="section-title">
@@ -110,8 +110,7 @@
               </div>
             </div>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+              I'm also a super avid gamer, when I have the time. Best game series ever is a tie between Mass Effect (without Andromeda) and Dragon Age. I also read ALOT - I am currently going through Stephen King's whole bibliography.
             </p>
           </div>
         </div>
@@ -189,7 +188,7 @@
     </section><!-- End Resume Section -->
 
         <!-- ======= Experience Section ======= -->
-    <section id="education" class="resume">
+    <section id="education" class="resume d-flex align-items-center">
       <div class="container">
 
         <div class="section-title">
@@ -223,7 +222,7 @@
     </section><!-- End Resume Section -->
 
     <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills section-bg">
+    <section id="skills" class="skills section-bg d-flex align-items-center">
       <div class="container">
 
         <div class="section-title">
@@ -289,69 +288,21 @@
     </section><!-- End Skills Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="sign up" class="contact">
+    <section id="signup" class="contact d-flex align-items-center">
       <div class="container">
 
         <div class="section-title">
           <h2>Sign Up</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Sign up to get my updates by clicking on the button below and filling the form!</p>
         </div>
 
         <div class="row" data-aos="fade-in">
 
-          <div class="col-lg-5 d-flex align-items-stretch">
-            <div class="info">
-              <div class="address">
-                <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
-              </div>
-
-              <div class="email">
-                <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>info@example.com</p>
-              </div>
-
-              <div class="phone">
-                <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
-              </div>
-
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
-            </div>
-
-          </div>
-
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="form-group col-md-6">
-                  <label for="name">Your Name</label>
-                  <input type="text" name="name" class="form-control" id="name" required>
-                </div>
-                <div class="form-group col-md-6">
-                  <label for="name">Your Email</label>
-                  <input type="email" class="form-control" name="email" id="email" required>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="name">Subject</label>
-                <input type="text" class="form-control" name="subject" id="subject" required>
-              </div>
-              <div class="form-group">
-                <label for="name">Message</label>
-                <textarea class="form-control" name="message" rows="10" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
-          </div>
+          <div class="col-lg-12">
+            <a href="https://mailchi.mp/487b73799110/4bg1tcajp6" target="_blank">
+              <button type="button" class="btn btn-secondary d-flex justify-content-center">SIGN UP</button>
+            </a>
+          </div>  
 
         </div>
 
@@ -363,16 +314,16 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <div class="copyright">
+      <!-- <div class="copyright">
         &copy; Copyright <strong><span>iPortfolio</span></strong>
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
+        All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+      <!--  Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      </div> -->
     </div>
   </footer><!-- End  Footer -->
 
