--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -73,6 +73,21 @@
       <h1>Sarah Demers</h1>
       <p>I'm a <span class="typed" data-typed-items="Kick Ass Engineer, Product Manager, Mother, Runner"></span></p>
     </div>
+    <div class="hero-container">
+      <button type="button" class="btn btn-secondary d-flex justify-content-center" onclick="getQuote()">Generate Quote</button>
+      <div id="leftQuote">
+
+      </div>
+      <div id="quote">
+
+      </div>
+      <div id="author">
+
+      </div>
+      <div id="rightQuote">
+
+      </div>
+    </div>
   </section><!-- End Hero -->
 
   <main id="main">
